[package]
name = "api"
build = "build.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-service = "2.0"
mongodb = "3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.31"
dotenv = "0.15"
tokio = { version = "1.42", features = ["full"] } 
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.9.0"
jsonwebtoken = "9.3"
bcrypt = "0.16.0"
lazy_static = "1.4"
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
actix-rt = "2.10"
actix-http-test = "3.2.0"
mockall = "0.13.1"